--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   sliding_up_panel: ^1.0.2
+  video_player: ^1.0.0
+  chewie: 
+
 
 dev_dependencies:
   flutter_test:
