--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,10 +43,26 @@ dev_dependencies:
 # The following section is specific to Flutter.
 flutter:
 
+
+
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/images/fajar.jpg
+    - assets/video.mp4
+    - assets/
+    - assets/images/gedungkotak1.png
+    - assets/images/gedungkotak2.png
+    - assets/images/gedungkotak3.png
+    - assets/images/gedungkotak4.png
+    - assets/images/gedungkotak5.png
+    - assets/images/gedungkotak6.png
+    - assets/images/gedungkotak7.png
+    - assets/images/gedungkotak8.png
+   
+  
 
   # To add assets to your application, add an assets section, like this:
   # assets:
